<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">GYM Member</string>

    <!-- Label for overflow menu option that inserts fake member data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all member data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Members</string>

    <!-- Title for the activity to add a new member [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_member">Add a Member</string>

    <!-- Label for editor menu option to save member and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current member [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_gender">Gender</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_measurement">Measurement</string>

    <!-- Label for date information in the editor [CHAR LIMIT=30] -->
    <string name="category_date">Date</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_member_name">Name</string>

    <!-- Text hint for father name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_member_father_name">Father Name</string>

    <!-- Text hint for code field in the editor [CHAR LIMIT=30] -->
    <string name="hint_member_code">Code Number</string>

    <!-- Text hint for phone field in the editor [CHAR LIMIT=30] -->
    <string name="hint_member_phone">Phone Number</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_member_weight">Weight</string>

    <!-- Text hint for date field in the editor [CHAR LIMIT=30] -->
    <string name="hint_member_date">Date</string>

    <!-- Units for weight of the member (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_member_weight">kg</string>

    <!-- Units for date day/month/year [CHAR LIMIT=5] -->
    <string name="unit_member_date">D/M/Y</string>

    <!-- Label for dropdown menu option if the member's gender is unknown [CHAR LIMIT=20] -->
    <string name="gender_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the member is male [CHAR LIMIT=20] -->
    <string name="gender_male">Male</string>

    <!-- Label for dropdown menu option if the member is female [CHAR LIMIT=20] -->
    <string name="gender_female">Female</string>

    <!-- Toast message for new member inserted-->
    <string name="editor_update_pet_failed">Update failed</string>

    <!-- Toast message for new member inserted-->
    <string name="save_message">Successfully Saved</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a member [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a member</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_member_successful">Member deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_member_failed">Error with deleting member</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this member?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
</resources>
